# Newcastle-Racing

./: .gitignore  .gitmodules  README.md  TODO.md
MPCC/C++/: CMakeLists.txt  install.sh  main.cpp  mpcc_controller.cpp  package.xml
MPCC/C++/Params/: config.json  track.h
MPCC/C++/install/: local_setup.sh  setup.sh
MPCC/C++/install/mpcc_control/share/mpcc_control/: package.bash  package.zsh
MPCC/C++/log/: latest_build
capture_camera/: package.xml  setup.cfg  setup.py
capture_camera/MIT-Driverless-CV-TrainingInfra/CVC-YOLOv3/: detect.py  models.py
capture_camera/artifacts/: yolo_baseline.cfg
capture_camera/capture_camera/: capture_camera_node.py  find_paths.py
eufs_rviz_plugins/: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  package.xml  plugins.xml
eufs_rviz_plugins/include/eufs_rviz_plugins/displays/cone_array_with_covariance/: cone_array_with_covariance_display.hpp
eufs_rviz_plugins/include/eufs_rviz_plugins/displays/waypoint_array_stamped/: waypoint_array_stamped_display.hpp
eufs_rviz_plugins/src/eufs_rviz_plugins/displays/cone_array_with_covariance/: cone_array_with_covariance_display.cpp
eufs_rviz_plugins/src/eufs_rviz_plugins/displays/waypoint_array_stamped/: waypoint_array_stamped_display.cpp
eufs_sim/: .gitmodules
eufs_sim/eufs_msgs/: CMakeLists.txt
eufs_sim/eufs_msgs/msg/: CanState.msg  PathWithBoundaries.msg
eufs_sim/eufs_plugins/gazebo_race_car_model/src/: state_machine.cpp
eufs_sim/eufs_rqt/src/eufs_rqt/: MissionControlGUI.py
eufs_sim/install/: local_setup.sh  setup.sh
eufs_sim/install/eufs_launcher/share/eufs_launcher/: package.sh
eufs_sim/install/eufs_models/share/ament_index/resource_index/parent_prefix_path/: eufs_models
eufs_sim/install/eufs_models/share/eufs_models/: local_setup.sh  package.sh
eufs_sim/install/eufs_msgs/include/eufs_msgs/msg/: cone_array_with_covariance_plus.hpp  cone_association.hpp  cone_association_array.hpp  cone_association_array_array_stamped.hpp  cone_association_array_stamped.hpp  cone_with_covariance_plus.hpp  cpu_status.hpp  cpu_usage.hpp  oss.hpp  particle.hpp  particle_slam.hpp  particle_slam_stamped.hpp  particle_stamped.hpp  stereo_image.hpp
eufs_sim/install/eufs_msgs/include/eufs_msgs/msg/detail/: cone_array_with_covariance_plus__builder.hpp  cone_array_with_covariance_plus__functions.c  cone_array_with_covariance_plus__rosidl_typesupport_fastrtps_c.h  cone_array_with_covariance_plus__rosidl_typesupport_fastrtps_cpp.hpp  cone_array_with_covariance_plus__struct.h  cone_array_with_covariance_plus__struct.hpp  cone_array_with_covariance_plus__traits.hpp  cone_array_with_covariance_plus__type_support.c  cone_array_with_covariance_plus__type_support.cpp  cone_array_with_covariance_plus__type_support.hpp  cone_association__builder.hpp  cone_association__functions.c  cone_association__rosidl_typesupport_fastrtps_c.h  cone_association__rosidl_typesupport_fastrtps_cpp.hpp  cone_association__struct.h  cone_association__struct.hpp  cone_association__traits.hpp  cone_association__type_support.c  cone_association__type_support.cpp  cone_association__type_support.hpp  cone_association_array__builder.hpp  cone_association_array__functions.c  cone_association_array__rosidl_typesupport_fastrtps_c.h  cone_association_array__rosidl_typesupport_fastrtps_cpp.hpp  cone_association_array__struct.h  cone_association_array__struct.hpp  cone_association_array__traits.hpp  cone_association_array__type_support.c  cone_association_array__type_support.cpp  cone_association_array__type_support.hpp  cone_association_array_array_stamped__builder.hpp  cone_association_array_array_stamped__functions.c  cone_association_array_array_stamped__rosidl_typesupport_fastrtps_c.h  cone_association_array_array_stamped__rosidl_typesupport_fastrtps_cpp.hpp  cone_association_array_array_stamped__struct.h  cone_association_array_array_stamped__struct.hpp  cone_association_array_array_stamped__traits.hpp  cone_association_array_array_stamped__type_support.c  cone_association_array_array_stamped__type_support.cpp  cone_association_array_array_stamped__type_support.hpp  (+100 more)
eufs_sim/install/eufs_msgs/include/eufs_msgs/srv/: get_map.hpp  record_start.hpp  record_stop.hpp  set_mission.hpp  set_string.hpp  set_track.hpp
eufs_sim/install/eufs_msgs/include/eufs_msgs/srv/detail/: get_map__builder.hpp  get_map__functions.c  get_map__rosidl_typesupport_fastrtps_c.h  get_map__rosidl_typesupport_fastrtps_cpp.hpp  get_map__struct.h  get_map__struct.hpp  get_map__traits.hpp  get_map__type_support.c  get_map__type_support.cpp  get_map__type_support.hpp  record_start__builder.hpp  record_start__functions.c  record_start__rosidl_typesupport_fastrtps_c.h  record_start__rosidl_typesupport_fastrtps_cpp.hpp  record_start__struct.h  record_start__struct.hpp  record_start__traits.hpp  record_start__type_support.c  record_start__type_support.cpp  record_start__type_support.hpp  record_stop__builder.hpp  record_stop__functions.c  record_stop__rosidl_typesupport_fastrtps_c.h  record_stop__rosidl_typesupport_fastrtps_cpp.hpp  record_stop__struct.h  record_stop__struct.hpp  record_stop__traits.hpp  record_stop__type_support.c  (+32 more)
eufs_sim/install/eufs_msgs/share/eufs_msgs/: local_setup.sh  package.sh
eufs_sim/install/eufs_msgs/share/eufs_msgs/msg/: ConeAssociation.idl  ConeAssociationArray.idl  ConeAssociationArrayStamped.idl  ConeWithCovariancePlus.idl  CpuStatus.idl  OSS.idl  Particle.idl  ParticleSLAM.idl  ParticleSLAMStamped.idl  ParticleStamped.idl
eufs_sim/install/eufs_plugins/share/eufs_plugins/: local_setup.sh  package.sh
eufs_sim/install/eufs_racecar/share/eufs_racecar/: package.sh
eufs_sim/install/eufs_rqt/share/eufs_rqt/: package.sh
eufs_sim/install/eufs_sensors/share/eufs_sensors/: local_setup.sh  package.sh
eufs_sim/install/eufs_tracks/share/eufs_tracks/: package.sh
eufs_sim/log/: latest_build
example/: package.xml  setup.py
ft-fsd-path-planning/: package.xml  setup.py
ft-fsd-path-planning/fsd_path_planning/: __init__.py  path_planning_node.py
ft-fsd-path-planning/fsd_path_planning/skidpad/: skidpad_relocalizer.py
(+3 files in other folders)
