<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>eufs_rviz_plugins</name>
  <version>0.1.0</version>
  <description>A package providing EUFS specific plugins for RViz</description>
  <maintainer email="niklasburggraaff@gmail.com">Niklas Burggraaff</maintainer>
  <license>MIT</license>

  <url type="website">http://eufs.co</url>
  <url type="repository">https://gitlab.com/eufs/eufs_rviz_plugins</url>
  <url type="bugtracker">https://gitlab.com/eufs/eufs_rviz_plugins/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>eigen3_cmake_module</depend>
  <depend>pluginlib</depend>
  <depend>rviz_common</depend>
  <depend>rviz_default_plugins</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>eufs_msgs</depend>
  <depend>eigen</depend>
  <depend>geometry_msgs</depend>
  <depend>libqt5-widgets</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
