<?xml version="1.0"?>
<package format="3">
  <name>ft-fsd-path-planning</name>
  <version>0.1.0</version>
  <description>A ROS 2 package for FSD path planning.</description>
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>


  <buildtool_depend>ament_python</buildtool_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
